Fix alignment issue

--- a/hero-section-simple/css/style.css
+++ b/hero-section-simple/css/style.css
@@ -79,6 +79,9 @@ body {
 }
 
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 24px;
   height: 48px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
@@ -176,6 +179,7 @@ body {
   .hero-section {
     flex-direction: row;
     padding: 105px 96px;
+    align-items: center;
   }
 
   .heading {
